# sipr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-homebrew.yml  release-deb.yml
rtp-core/: Cargo.toml
rtp-core/src/: codec.rs  jitter.rs  lib.rs  packet.rs  session.rs  wav.rs
rtp-core/src/audio_device/: cpal_backend.rs  mod.rs
scripts/: update-homebrew-formula.sh
sip-core/: Cargo.toml
sip-core/src/: auth.rs  dialog.rs  header.rs  lib.rs  message.rs  sdp.rs  transaction.rs  transport.rs
siphone/: Cargo.toml
siphone/src/: config.rs  main.rs  phone.rs  sip_debug.rs  ui.rs
siphone/tests/: audio_fidelity_e2e.rs  e2e_tests.rs  history_features_e2e.rs
