[workspace]
members = ["sip-core", "rtp-core", "siphone"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/xmppjingle/sipr"
homepage = "https://github.com/xmppjingle/sipr"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
