[package]
name = "rtp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RTP media transport with jitter buffer and codec support"

[features]
default = ["audio-device"]
audio-device = ["cpal"]

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
cpal = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
