[package]
name = "rtp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RTP media transport with jitter buffer and codec support"
keywords = ["rtp", "audio", "voip", "jitter-buffer", "g711"]
categories = ["multimedia::audio", "network-programming"]

[features]
default = ["audio-device", "opus"]
audio-device = ["cpal"]
opus = ["audiopus"]

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
cpal = { version = "0.15", optional = true }
audiopus = { version = "0.3.0-rc.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
