[package]
name = "sip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIP protocol library for parsing, serialization, and dialog management"

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
