[package]
name = "siphone"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI SIP softphone application"

[[bin]]
name = "siphone"
path = "src/main.rs"

[features]
default = ["audio-device"]
audio-device = ["rtp-core/audio-device"]

[dependencies]
sip-core = { path = "../sip-core" }
rtp-core = { path = "../rtp-core" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
